--- a/source/scss/layout/_footer.scss
+++ b/source/scss/layout/_footer.scss
@@ -10,5 +10,6 @@ footer {
 .site__footer {
   background: $footer-bgcolor;
   color: $footer-color;
-  padding: 2rem 0;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
 }
