--- a/source/scss/layout/_main.scss
+++ b/source/scss/layout/_main.scss
@@ -3,5 +3,6 @@ main {
 }
 
 .site__main {
-  padding: $margin-element-bottom 0;
+  padding-bottom: $margin-element-bottom;
+  padding-top: $margin-element-bottom;
 }
