--- a/source/scss/modules/_link.scss
+++ b/source/scss/modules/_link.scss
@@ -3,7 +3,7 @@ $link-color-active: lighten($link-color, 10%);
 $link-color-hover: darken($link-color, 10%);
 
 a {
-  background: transparent;
+  background-color: transparent;
   border: 0;
   color: $link-color;
   text-decoration: none;
