--- a/source/scss/modules/_posts.scss
+++ b/source/scss/modules/_posts.scss
@@ -4,12 +4,12 @@ article {
 
 .posts {
   list-style: none;
-  margin: 0 0 1.5rem;
+  margin-bottom: 1.5rem;
   padding: 0;
 }
 
 .post {
-  margin: 0 0 1.5rem;
+  margin-bottom: 1.5rem;
 
   &__title {
 
