--- a/source/scss/modules/_quote.scss
+++ b/source/scss/modules/_quote.scss
@@ -1,5 +1,6 @@
 blockquote {
-  margin: 0 0 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 0;
   quotes: '\201C' '\201D' '\2018' '\2019';
 
   p {
