--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -35,7 +35,10 @@ body {
   color: $base-color;
   display: flex;
   flex-direction: column;
-  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family, $base-font-family-fallback;
+  font-family: $base-font-family, $base-font-family-fallback;
+  font-size: $base-font-size;
+  font-weight: $base-font-weight;
+  line-height: $base-line-height;
   margin: 0;
   min-height: 100%;
   position: relative;
