--- a/source/scss/modules/_breadcrumb.scss
+++ b/source/scss/modules/_breadcrumb.scss
@@ -1,10 +1,11 @@
 .breadcrumb {
   @include clearfix();
   @include list-unstyled();
-  margin: 0 -.5rem;
+  margin: -.5rem;
 
   li {
     float: left;
+    margin: .5rem;
   }
 
   a {
