--- a/source/scss/modules/_code.scss
+++ b/source/scss/modules/_code.scss
@@ -10,7 +10,8 @@ code {
 pre {
   background-color: $code-bgcolor;
   display: block;
-  margin: 0 0 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 0;
   overflow: auto;
   padding: 1rem;
   word-break: break-all;
