--- a/source/scss/modules/_dialog.scss
+++ b/source/scss/modules/_dialog.scss
@@ -4,7 +4,7 @@ dialog {
   padding: 1rem;
 
   &::backdrop {
-    background: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .5);
     bottom: 0;
     left: 0;
     position: fixed;
