--- a/source/scss/modules/_grid.scss
+++ b/source/scss/modules/_grid.scss
@@ -4,17 +4,18 @@ $grid-gutter: 2%;
 
 .grid {
   @include clearfix();
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   max-width: $grid-container;
   width: 90%;
 
   &__row {
     @include clearfix();
-    margin: 0 $grid-gutter / -2;
+    margin: $grid-gutter / -2;
   }
 
   &__col {
-    margin: 0 $grid-gutter / 2;
+    margin: $grid-gutter / 2;
     min-height: 1px;
 
     @media (min-width: $media-md) {
