--- a/source/scss/modules/_images.scss
+++ b/source/scss/modules/_images.scss
@@ -16,7 +16,10 @@ svg {
 
 figure {
   display: block;
-  margin: 0 0 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
 }
 
 figcaption {
