--- a/source/scss/modules/_lists.scss
+++ b/source/scss/modules/_lists.scss
@@ -1,18 +1,14 @@
 dl,
 ol,
 ul {
-  margin: 0 0 1.5rem;
-  padding: 0 0 0 1.25rem;
+  margin-bottom: 1.5rem;
+  margin-top: 0;
+  padding-left: 1.25rem;
 
   dd,
   ol,
   ul {
-    margin: .5rem 0 0;
-    padding-left: 1.25rem;
-  }
-
-  dd {
-    margin-left: 0;
+    margin-top: .5rem;
   }
 
   li {
