--- a/source/scss/modules/_tables.scss
+++ b/source/scss/modules/_tables.scss
@@ -1,7 +1,8 @@
 table {
   border-collapse: collapse;
   border-spacing: 0;
-  margin: 0 0 1.5rem;
+  margin-bottom: 1.5rem;
+  margin-top: 0;
   text-align: left;
   width: 100%;
 }
