--- a/source/scss/modules/_tags.scss
+++ b/source/scss/modules/_tags.scss
@@ -2,13 +2,15 @@
   @include clearfix();
   font-size: .875rem;
   list-style: none;
-  margin: 0 -.25rem 1.5rem;
+  margin-bottom: 1.25rem;
+  margin-left: -.25rem;
+  margin-right: -.25rem;
   padding: 0;
 }
 
 .tag {
   float: left;
-  margin: 0 .25rem;
+  margin: .25rem;
 
   a {
     border: 1px solid $border-color;
