--- a/source/scss/modules/_dialog.scss
+++ b/source/scss/modules/_dialog.scss
@@ -1,10 +1,12 @@
+$dialog-backdrop-bgcolor: rgba(0, 0, 0, .85);
+
 dialog {
   border: 0;
   display: none;
   padding: 1rem;
 
   &::backdrop {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: $dialog-backdrop-bgcolor;
     bottom: 0;
     left: 0;
     position: fixed;
