--- a/source/css/style.css
+++ b/source/css/style.css
@@ -5,9 +5,6 @@
 *::after {
   box-sizing: inherit; }
 
-* {
-  -webkit-tap-highlight-color: transparent; }
-
 ::-moz-selection {
   background: #111;
   color: #fff;
@@ -20,14 +17,12 @@
 
 html {
   box-sizing: border-box;
-  -webkit-font-font-smoothing: antialiased;
   font-size: 100%;
-  -moz-osx-font-smoothing: grayscale;
-  font-smoothing: grayscale;
   height: 100%;
   text-rendering: optimizeLegibility;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%; }
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+          text-size-adjust: 100%; }
 
 body {
   background: #fff;
