replace Scss with PostCSS

--- a/source/css/fonts/fontname/fontname.css
+++ b/source/css/fonts/fontname/fontname.css
@@ -2,6 +2,6 @@
   font-family: 'FontName';
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/fontname.woff") format("woff"), url("../fonts/fontname.woff2") format("woff2"); }
-
-/*# sourceMappingURL=fontname.css.map */
+  src: url('/fonts/fontname/fontname.woff') format('woff'),
+       url('/fonts/fontname/fontname.woff2') format('woff2');
+}
