replace shorthand with longhand

--- a/source/css/base.css
+++ b/source/css/base.css
@@ -17,7 +17,7 @@
 }
 
 ::selection {
-  background: var(--bodyColor);
+  background-color: var(--bodyColor);
   color: var(--bodyBgColor);
   text-shadow: none;
 }
