move assets into "assets" folder

--- a/source/templates/layouts/main-left.html
+++ b/source/templates/layouts/main-left.html
@@ -26,8 +26,8 @@
   {{> footer}}
 
   {{> google-analytics}}
-  <!-- build:js js/script.js -->
-  <script src="js/script.js"></script>
+  <!-- build:js assets/js/script.js -->
+  <script src="assets/js/script.js"></script>
   <!-- endbuild -->
 
 </body>
