--- a/source/templates/layouts/main-left-right.html
+++ b/source/templates/layouts/main-left-right.html
@@ -28,8 +28,8 @@
   {{> footer}}
 
   {{> google-analytics}}
-  <!-- build:js js/script.js -->
-  <script src="js/script.js"></script>
+  <!-- build:js assets/js/script.js -->
+  <script src="assets/js/script.js"></script>
   <!-- endbuild -->
 
 </body>
