--- a/source/templates/partials/head.html
+++ b/source/templates/partials/head.html
@@ -21,7 +21,7 @@
 
   <!-- Stylesheets -->
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 
   <!-- Icons -->
 
